# pk-log-engine

./: .cproject  .gitignore  .gitignore.swp  .project  CMakeLists.txt  Makefile  README.md  log-engine.mk  log-engine.project  log-engine.txt  log-engine.workspace  log.txt  main.cpp
.codelite/: log-engine.session  refactoring.db
Debug/: log-engine
resources/: config.json  input.json  prepareLogfile.sh  rules.json
src/: .gitignore  config.json  main.cpp
src/engine/: AsyncExecutionBuffer.cpp  AsyncExecutionBuffer.h  Dispatcher.cpp  Dispatcher.h  Engine.cpp  Engine.h  IEngine.h  IEngineAdapter.h  OutputWrapper.cpp  OutputWrapper.h
src/engine/adapter/: STDOutput.cpp  STDOutput.h
src/engine/adapter/Categorisation/: Categorisation.h
src/engine/adapter/Categorization/: Categorization.cpp  Categorization.h  Result.h  Rule.h
src/engine/adapter/ClientUpTime/: ClientUpTime.cpp  ClientUpTime.h  Connection.h
src/engine/adapter/MultiIPChecker/: MultiIPChecker.h
src/engine/adapter/OptimizeMe/: OptimizeMe.h
src/engine/adapter/PatternAbuser/: PatternAbuser.cpp  PatternAbuser.h
src/engine/adapter/TextSearch/: TextSearch.cpp  TextSearch.h  TextSearchBufferElement.h  TextSearchPayload.h  TextSearchPayloadSerializer.h
src/engine/interface/: IEngineAdapter.h  IEngineOutputElement.h  IJsonSerializable.h
src/engine/model/: EngineInput.h  IExecutionTask.h  Payload.h
src/engine/task/: AsyncExecutionBuffer.cpp  AsyncExecutionBuffer.h  TaskScheduler.cpp  TaskScheduler.h
src/lib/: MBLib.h
src/modules/RuleProcessor/: Result.h  Rule.h  RuleProcessor.cpp  RuleProcessor.h  Type.h
src/modules/StartRoutine/: StartRoutine.cpp  StartRoutine.h
src/util/: Config.cpp  Config.h  ErrorHandler.cpp  ErrorHandler.h  Exception.cpp  Exception.h
src/util/exceptions/: InvalidArgumentException.h  InvalidConfigException.h
src/util/logger/: Logger.cpp  Logger.h
test/: TestTaskScheduler.cpp
